Import of HORSHACK/Log-Log4perl-ConfigByInifile-0.04 from CPAN.
gitpan-cpan-distribution: Log-Log4perl-ConfigByInifile
gitpan-cpan-version:      0.04
gitpan-cpan-path:         HORSHACK/Log-Log4perl-ConfigByInifile-0.04.tar.gz
gitpan-cpan-author:       HORSHACK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,4 +5,6 @@ Revision history for Perl module Log::Log4perl::ConfigByInifile
       first version, built on experiences of a cut&paste solution
       I use for a longer time.
 
+0.04 Fri Mar 16 18:38:00 2007
+     Perl Best Practices, no change of functionality
 
